syntax = "proto3";

package batch;

option java_package = "org.kreps.iotdb.protos";
option java_multiple_files = true;

message DataRequest {
    string measurement = 1;
    string interval = 2;
    string startDate = 3;
    string endDate = 4;
}

message DataResponse {
    bytes points = 1;
}

service Sender {
    rpc getData(DataRequest) returns (stream DataResponse) {}
}